Fix:: Security fixes and changes